remove CommandAPI onLoad, null pointer if no world